Fix functions specification.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,10 +1,12 @@
-CFLAGS    += -I../include -I.
-LDFLAGS   += -L../lib -lcmat -lcunit
+CFLAGS    += -g -I../include -I.
+LDFLAGS   += -g -L../lib -lcmat -lcunit
 
 CSRC      := main.c \
+             test_add.c \
+             test_sub.c \
+             test_mul.c \
              test_det.c \
              test_inverse.c \
-             test_mul.c \
              test_transpose.c
 
 OBJS      := $(patsubst %.c,%.o, $(CSRC))
@@ -15,8 +17,6 @@ all: $(TARGET)
 
 $(TARGET): $(OBJS)
 	$(CC) -o $@ $^ $(LDFLAGS)
-
-main.c : test.h
 
 test: $(TARGET)
 	./$(TARGET)
